QMI: undesired WDS Profile Changed indications triggered by our own operations
The Modem3gpp.ProfileManager.Updated signal should be emitted whenever we receive an indication that the profile list was updated by the network through OTA procedures, this signal should not be emitted for our own user operations.
Since 65efdded, a "WDS Profile Changed" indication may trigger an Updated signal, which should not happen. The logic should ignore indications of that type triggered during a "WDS Modify Profile" operation.
2023-01-10T08:55:54.943978Z DEBUG ModemManager[6532]: <dbg> [modem0] set profile state (3/8): select profile (exact)
2023-01-10T08:55:54.944197Z DEBUG ModemManager[6532]: <dbg> [modem0] overwritting profile '3'
2023-01-10T08:55:54.944350Z DEBUG ModemManager[6532]: <dbg> [modem0] set profile state (4/8): check activated profile
2023-01-10T08:55:54.944516Z DEBUG ModemManager[6532]: <dbg> [modem0] set profile state (5/8): deactivate profile
2023-01-10T08:55:54.944896Z DEBUG ModemManager[6532]: <dbg> [modem0] skipping profile deactivation
2023-01-10T08:55:54.945013Z DEBUG ModemManager[6532]: <dbg> [modem0] set profile state (6/8): store profile
2023-01-10T08:55:54.945187Z DEBUG ModemManager[6532]: <dbg> [modem0] using default (internet) APN type
2023-01-10T08:55:54.945398Z DEBUG ModemManager[6532]: <dbg> [qrtr://0] sent message...
<<<<<< RAW:
<<<<<< length = 73
<<<<<< data = 01:48:00:00:01:01:00:4D:69:28:00:3C...
2023-01-10T08:55:54.946134Z DEBUG ModemManager[6532]: <dbg> [qrtr://0] sent generic request (translated)...
<<<<<< QMUX:
<<<<<< length = 72
<<<<<< flags = 0x00
<<<<<< service = "wds"
<<<<<<
client = 1
<<<<<< QMI:
<<<<<< flags = "none"
<<<<<< transaction = 26957
<<<<<< tlv_length = 60
<<<<<< message = "Modify Profile" (0x0028)
<<<<<< TLV:
<<<<<< type = "AP
N Type Mask" (0xdd)
<<<<<< length = 8
<<<<<< value = 01:00:00:00:00:00:00:00
<<<<<< translated = default
<<<<<< TLV:
<<<<<< type = "Authentication" (0x1d)
<<<<<< length
= 1
<<<<<< value = 00
<<<<<< translated = none
<<<<<< TLV:
<<<<<< type = "Password" (0x1c)
<<<<<< length = 0
<<<<<< value = ###...
<<<<<< translated = '###'
<<<
<<< TLV:
<<<<<< type = "Username" (0x1b)
<<<<<< length = 0
<<<<<< value = ###...
<<<<<< translated = '###'
<<<<<< TLV:
<<<<<< type = "APN Name" (0x14)
<<<<<< leng
th = 9
<<<<<< value = 62:72:6F:61:64:62:61:6E:64
<<<<<< translated = broadband
<<<<<< TLV:
<<<<<< type = "PDP Type" (0x11)
<<<<<< length = 1
<<<<<< value = 03
<<
<<<< translated = ipv4-or-ipv6
<<<<<< TLV:
<<<<<< type = "Profile Name" (0x10)
<<<<<< length = 15
<<<<<< value = 43:72:4F:53:5F:61:74:74:61:63:68:5F:50:44:4E
<<<<<< translated
= CrOS_attach_PDN
<<<<<< TLV:
<<<<<< type = "Profile Identifier" (0x01)
<<<<<< length = 2
<<<<<< value = 00:03
<<<<<< translated = [ profile_type = '3gpp' profile_index = '3' ]#0
12
2023-01-10T08:55:54.948051Z DEBUG ModemManager[6532]: <dbg> [qrtr://0] received message...
<<<<<< RAW:
<<<<<< length = 19
<<<<<< data = 01:12:00:00:01:01:04:63:4F:A8:00:06...
2023-01-10T08:55:54.948352Z DEBUG ModemManager[6532]: <dbg> [qrtr://0] received generic indication (translated)...
<<<<<< QMUX:
<<<<<< length = 18
<<<<<< flags = 0x00
<<<<<< service = "wds"
<<
<<<< client = 1
<<<<<< QMI:
<<<<<< flags = "indication"
<<<<<< transaction = 20323
<<<<<< tlv_length = 6
<<<<<< message = "Profile Changed" (0x00A8)
<<<<<< TLV:
<<<<<< type = "Profile Event" (0x10)
<<<<<< length = 3
<<<<<< value = 00:03:03
<<<<<< translated = [ profile_type = '3gpp' profile_index = '3' change_event = 'modify-event' ]
2023-01-10T08:55:54.948535Z DEBUG ModemManager[6532]: <dbg> [qrtr://0] received message...
<<<<<< RAW:
<<<<<< length = 20
<<<<<< data = 01:13:00:00:01:01:02:4D:69:28:00:07...
2023-01-10T08:55:54.948714Z DEBUG ModemManager[6532]: <dbg> [qrtr://0] received generic response (translated)...
<<<<<< QMUX:
<<<<<< length = 19
<<<<<< flags = 0x00
<<<<<< service = "wds"
<<<<
<< client = 1
<<<<<< QMI:
<<<<<< flags = "response"
<<<<<< transaction = 26957
<<<<<< tlv_length = 7
<<<<<< message = "Modify Profile" (0x0028)
<<<<<< TLV:
<<<<<< type
= "Result" (0x02)
<<<<<< length = 4
<<<<<< value = 00:00:00:00
<<<<<< translated = SUCCESS
2023-01-10T08:55:54.948941Z DEBUG ModemManager[6532]: <dbg> [modem0] stored profile '3'
Edited by Aleksander Morgado