UPSTREAM: broadband-modem-qmi: ignore our own profile changed indications

The device may emit a "WDS Profile Changed" indication triggered from
our own "WDS Modify Profile", "WDS Create Profile" or "WDS Delete
Profile" operations, so ensure those are fully ignored so that we
don't emit the "Updated" signal in the ProfileManager interface.

The logic keeps track of the amount of concurrent operations so that
the signal is ignored for as long as there is at least one operation
running.

Fixes https://gitlab.freedesktop.org/mobile-broadband/ModemManager/-/issues/687

(cherry picked from commit cc78a6439f71e3f58b97972d171b966a42476a98)

BUG=b:264259856
TEST=Manual testing in Trogdor with AT&T SIM card

Cq-Depend: chromium:4152010
Change-Id: I136efdb1a93f35138220ee68103d11215e76930a
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/third_party/modemmanager-next/+/4155327
Tested-by: Aleksander Morgado <aleksandermj@google.com>
Reviewed-by: Eric Caruso <ejcaruso@chromium.org>
Reviewed-by: Andrew Lassalle <andrewlassalle@chromium.org>
Commit-Queue: Pavan Holla <pholla@google.com>